--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <title>Hello GitHub</title>
-</head>
-<body>
-  <h1>こんにちは、GitHub！</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Hello GitHub</title>
+  </head>
+  <body>
+    <h1>こんにちは、GitHub！</h1>
+    <p>初めての更新です</p>
+  </body>
 </html>
